# structured-rag

./: LICENSE  OPRO-Compiled-JSON-Mode.ipynb  README.md  aggregate_jsons.py  dspy_program.py  dspy_signatures.py  fstring_inference.py  fstring_prompts.py  pyproject.toml  readme.md  related-works.md  run_all_tests.sh  run_test.py  setup.py  test-cost.md  wiki-abstract-titles.json  wiki-answerable-questions.json
data/: Readme.md  WikiQuestions-2.0.json  WikiQuestions-builder.py  WikiQuestions.json  duplicate-answer.py
data/SuperBEIR/: SuperBEIR-categories-with-rationales.json
docs/: 1_run_test.md  2_result_visualization.md  task-zoo.md
notebooks/: StructuredRAG_Experimental_Visualization.ipynb
results-trial-1/: AssessAnswerability-llama3:instruct.json  GenerateAnswerWithConfidence-llama3:instruct.json  ParaphraseQuestions-llama3:instruct.json  RateContext-llama3:instruct.json
results-trial-2/: AssessAnswerability-llama3:instruct.json  GenerateAnswersWithConfidence-llama3:instruct.json  ParaphraseQuestions-llama3:instruct.json  RateContext-llama3:instruct.json
src/: dspy_program.py  fstring_inference.py  fstring_program.py
structured_rag/: dspy_program.py  dspy_signatures.py  fstring_program.py  fstring_prompts.py  models.py  outlines.py  readme.md
tests/: aggregate_result_jsons.py  compute_averages.py  dataset.py  helpers.py  metrics.py  models.py  new_aggregate_result_jsons.py  ollama-GenerateAnswer.sh  run-all-batch-tests.sh  run-all-tests.sh  run-single-test.sh  run_batch_test.py  run_test.py  test-single-model.sh  visualize.py
(+146 files in other folders)
